5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1668_1399.log
== TEST (2019-04-15 19:10:39) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

votos = votos_ambrosio + votos_demelza ==100 / 100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_ambrosio - votos_demelza)
else:
	print("Demelza Olecram")
	print(votos_demelza - votos_ambrosio)
-- OUTPUT:
Ambrozio Rutra
28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:19) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

votos = votos_ambrosio + votos_demelza =100 / 100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_ambrosio - votos_demelza)
else:
	print("Demelza Olecram")
	print(votos_demelza - votos_ambrosio)
-- ERROR:
File "XXXX", line 4
    votos = votos_ambrosio + votos_demelza =100 / 100
           ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:09) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

votos = votos_ambrosio + votos_demelza == 100 / 100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_ambrosio - votos_demelza)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Ambrozio Rutra
28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:56) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

votos = votos_ambrosio + votos_demelza == 100 / 100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Ambrozio Rutra
-28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:15:05) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

votos = votos_ambrosio + votos_demelza == 100 / 100

if(votos_ambrosio > votos_demelza == votos):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Demelza Olecram
28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:00) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

votos_ambrosio + votos_demelza == 100 / 100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Ambrozio Rutra
-28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:17:43) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))
n = 100
a = votos_ambrosio/n
b = votos_demelza/n

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Ambrozio Rutra
-28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:18:30) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))
n = 100
a = votos_ambrosio + votos_demelza == 100/100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Ambrozio Rutra
-28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:18:42) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))
n = 100
a = votos_ambrosio + votos_demelza == 100/100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Ambrozio Rutra
-28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:56) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

a = votos_ambrosio + votos_demelza* 100/100 == 100

if(votos_ambrosio > votos_demelza):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Ambrozio Rutra
-28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:46) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

a = votos_ambrosio + votos_demelza 

if(votos_ambrosio > votos_demelza == 100 / 100):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Demelza Olecram
28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 16:54:17) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

a = votos_ambrosio + votos_demelza 

if(votos_ambrosio > votos_demelza == 100 / 100):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Demelza Olecram
28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 16:54:46) 
-- CODE:
votos_ambrosio = int(input("qunatidade: "))
votos_demelza = int(input("quntidade: "))

a = votos_ambrosio + votos_demelza 

if(votos_ambrosio > votos_demelza == 100 / 100):
	print("Ambrozio Rutra")
	print(votos_demelza - votos_ambrosio)
else:
	print("Demelza Olecram")
	print(votos_ambrosio - votos_demelza)
-- OUTPUT:
Demelza Olecram
28690000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
